# tradenews

./: .gitignore  README.md  config.env.example  pyproject.toml  pytest.ini
datasets/: README.md  tickers_game_universe.txt
datasets/articles/: minimal_example.json
docs/: architecture.md  bench.md  building_dataset.md  dataset_and_metrics_plan.md  evaluation_workflow.md  fixtures.md  hypothesis_log.md  news_impulse_plan.md
examples/: sample_evaluation.jsonl
fixtures/: README.md
scripts/: build_eval_from_points.py  build_game_dataset_from_kb_dump.sh  fetch_nyse_articles_fixture.py  filter_dataset_points_jsonl.py  load_lse_config_env.py  load_merged_tradenews_env.py  lse_csv_to_dataset_points.py  push_github_from_config_env.sh  read_lse_config_key.py  run_compare.py  run_model_benchmark.py  run_ollama_predict_fixture.py  run_openai_predict_fixture.py  run_tradenews_eval_compare.sh  snapshot_live_dataset.py  with_lse_config_env.sh  with_tradenews_config_env.sh
tests/: test_article_fixture.py  test_benchmark_report.py  test_dataset_points.py  test_lse_kb_converter.py  test_metrics.py  test_nyse_news_prompt_parity.py  test_ollama_parse.py  test_openai_chat_client.py  test_openai_predictor.py  test_signal_aggregate.py  test_valuation_skip_tickers.py
tradenews/: __init__.py  article_fixture.py  benchmark_report.py  compare.py  config_env.py  dataset_points.py  eval_defaults.py  gemini_client.py  io.py  lse_kb_converter.py  metrics.py  ollama_client.py  openai_chat_client.py  prompt_news_signal.py  proxyapi.py  schemas.py  signal_aggregate.py  valuation.py
(+13 files in other folders)
